--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Student Form</h1>
-<%= form_tag new_student_path do %>
+<%= form_tag students_path do %>
  
   <label>First Name:</label><br>
   <%= text_area_tag :'student[first_name]' %><br>
@@ -9,6 +9,5 @@
 
 
   <%= submit_tag "Submit Student" %>
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <input type="submit" value="Submit Student">
+
 <% end %> 
